# GSELib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
gselib/: __init__.py
gselib/tools/: __init__.py  paths.py  version.py
